# ferro

./: Cargo.toml
src/: command.rs  ferro.rs  lazy.rs  lib.rs  playbook.rs  when.rs
src/modules/: command.rs  mod.rs
src/modules/aws/: cloudformation.rs
