[package]
name = "ferro"
version = "0.1.0"
authors = ["Joseph Wright <rjosephwright@gmail.com>"]
edition = "2018"

[dependencies]
#serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
typetag = "0.1.4"

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[dependencies.rusoto_core]
git = "https://github.com/rusoto/rusoto.git"
rev = "f41a2959bf03dcf1cfed0b73fd65b33b16067448"

[dependencies.rusoto_cloudformation]
git = "https://github.com/rusoto/rusoto.git"
rev = "f41a2959bf03dcf1cfed0b73fd65b33b16067448"
features = ["serialize_structs"]

[dependencies.rusoto_credential]
git = "https://github.com/rusoto/rusoto.git"
rev = "f41a2959bf03dcf1cfed0b73fd65b33b16067448"

[dependencies.rusoto_signature]
git = "https://github.com/rusoto/rusoto.git"
rev = "f41a2959bf03dcf1cfed0b73fd65b33b16067448"

